# turrishw

./: .DockerFile  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  setup.py  thw.py  tox.ini
ci/python3.9/: Dockerfile
tests/: test_general.py
tests/tests_roots/: clone_root.sh  mox-abc-wwan-7.0.json  mox-ac-6.0-vlans.json  mox-ad-6.0-vlans.json  mox-power-wifi-6.0.json  mox1.json  mox2.json  mox3.json  omnia-2wlans-LTE.json  omnia-6.0-vlans.json  omnia-lan2-flapping.json  omnia.json  omnia_ng-prototype.json  turris-1.1-wwan-7.0.json  turris-6.0-vlans.json  turris.json
tests_roots/: mox+B+sdio.json  mox+BEED+sdio+usb_eth.json  mox+C.json  mox+EEC.json  mox1.json  mox2.json  mox3.json  omnia-4.0.json  omnia-4.4.json  omnia.json  swconfig.common  swconfig.common.sh  turris-4.14.json  turris-4.4.json  turris.json
tests_roots/mox+B+sdio/proc/: meminfo
tests_roots/mox+B+sdio/sys/block/: mtdblock0  mtdblock2
tests_roots/mox+B+sdio/sys/firmware/: fdt
tests_roots/mox+B+sdio/sys/kernel/: notes  uevent_seqnum
tests_roots/mox+BEED+sdio+usb_eth/proc/: meminfo
tests_roots/mox+BEED+sdio+usb_eth/sys/block/: mmcblk1  mtdblock3  mtdblock4
tests_roots/mox+BEED+sdio+usb_eth/sys/firmware/: fdt
tests_roots/mox+C/proc/: meminfo
tests_roots/mox+EEC/proc/: meminfo
tests_roots/omnia-4.0/proc/: meminfo
tests_roots/omnia-4.4/proc/: meminfo
tests_roots/turris-4.14/proc/: meminfo
tests_roots/turris-4.4/proc/: meminfo
turrishw/: __init__.py  __main__.py  _utils.py  board.py  device.py  ethernet.py  interface.py  mox.py  network.py  omnia.py  omnia_ng.py  turris1x.py  turrishw.py  utils.py  wifi.py
(+9300 files in other folders)
