[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turrishw"
version = "1.1.0"
dynamic = []
description = "Turris hardware detection/query tool."
readme = "README.md"
license = "MIT"
authors = [
    { name = "CZ.NIC, z. s. p. o.", email = "packaging@turris.cz" },
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pre-commit",
    "ruff == 0.12.4",
]

[project.urls]
Homepage = "https://gitlab.nic.cz/turris/turrishw"

[tool.hatch.build.targets.sdist]
include = [
    "/turrishw",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = []
select = [
    'A',  # flake8-builtins
    'B',  # flake8-bugbear
    'E',  # pycodestyle - errors
    'F',  # pyflakes
    'I',  # isort
    'W',  # pycodestyle - warnings
]
fixable = ['I001']  # isort: imports are incorrectly sorted

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]  # test files should have asserts

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
